crates/vespertide-exporter/src/seaorm/snapshots/vespertide_exporter__seaorm__tests__render_entity_with_schema_snapshots@schema_username_fk.snap
---
source: crates/vespertide-exporter/src/seaorm/mod.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "session")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: Uuid,
    pub username: String,
    #[sea_orm(belongs_to, from = "username", to = "username")]
    pub user: HasOne<super::user::Entity>,
}

vespera::schema_type!(Schema from Model, name = "SessionSchema");
impl ActiveModelBehavior for ActiveModel {}
